StableDiffusion系のサービスを更新